; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_terminal-util.c_default_term_for_tty.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_terminal-util.c_default_term_for_tty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"linux\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"vt220\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @default_term_for_tty(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @tty_is_vc_resolve(i8* %6)
  %8 = icmp ne i64 %7, 0
  br label %9

9:                                                ; preds = %5, %1
  %10 = phi i1 [ false, %1 ], [ %8, %5 ]
  %11 = zext i1 %10 to i64
  %12 = select i1 %10, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0)
  ret i8* %12
}

declare dso_local i64 @tty_is_vc_resolve(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
